Windows QPA: Prospective fix for crash occurring when changing screen during session lock

Check on currentScreen in QWindowsWindow::checkForScreenChanged().

Fixes: QTBUG-80436
Change-Id: I19e34b9e2c32c9cfc8e5e5b758783c0ab89d5556
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 6c23f006e07b774b0eef863cccd36a992274ca32)